fix: section image cropped on mobile

--- a/resources/scss/components/_section.scss
+++ b/resources/scss/components/_section.scss
@@ -87,6 +87,7 @@
 	.section {
 		margin-top: $section-mobileMargin;
 		margin-bottom: $section-mobileMargin;
+		overflow: visible;
 	}
 
 	.section--brokenWhite,
